Name:                deco
Version:             0.0
Description:         The magical programming language.
License:             GPL
License-file:        LICENSE
Author:              Andy Kitchen
Maintainer:          kitchen.andy@gmail.com
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable deco
  Main-is:           Main.hs
  Other-Modules:     Parser,
                     Lexer,
                     Evaluate,
                     Primitives

  Extensions:        FlexibleInstances
  Build-Depends:
    base >= 3 && < 5,
    containers >= 0.4 && < 2,
    transformers >= 0.2 && < 2,
    haskeline >= 0.6 && < 2,
    parsec >= 3 && < 4,
    CC-delcont >= 0.2 && < 2
